<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white">

    <View
        android:layout_width="@dimen/right_top_black_bg_width"
        android:layout_height="@dimen/right_top_black_bg_height"
        android:layout_marginTop="11dp"
        android:layout_marginRight="4dp"
        android:layout_alignParentRight="true"
        android:background="@color/black"/>
    
    <!-- Player Version -->
    <TextView
        android:id="@+id/player_text_version"
        android:layout_width="match_parent"
        android:layout_height="@dimen/textview_height"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginTop="4dp"
        android:paddingLeft="60dp"
        android:layout_alignParentTop="true"
        android:gravity="left"
        style="@style/PlayerTextStyle"
        android:background="@drawable/black_not_rounded_bottom_right_shape"
        tools:text="@string/app_name" />

    <LinearLayout
        android:id="@+id/track_info_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@+id/jog_wheel_frame"
        android:layout_toRightOf="@+id/pitch_control">
    
        <!-- Current Track Title -->
        <TextView
            android:id="@+id/player_text_current_track"
            android:layout_width="match_parent"
            android:layout_height="@dimen/textview_height"
            style="@style/PlayerTextStyle"
            android:textColor="@color/q_orange"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="4dp"
            android:paddingLeft="15dp"
            android:gravity="left|center_vertical"
            android:text="@string/player_no_track_loaded" />
    
        <!-- Background -->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/textview_height">    
        
            <View
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:background="@drawable/black_rounded_shape"/>
        
            <!-- Total Track Time -->
            <TextView
                android:id="@+id/player_text_total_time"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/textview_height"
                android:layout_marginLeft="15dp"
                android:layout_centerVertical="true"
                android:layout_alignParentLeft="true"
                style="@style/PlayerTextStyle"
                tools:text="total: 00:00:00" />
        
            <!-- Dynamic Track Time (Elapsed or Remain)-->
            <TextView
                android:id="@+id/player_text_dynamic_time"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/textview_height"
                android:layout_marginRight="15dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:textColor="@color/q_orange"
                style="@style/PlayerTextStyle"
                tools:text="remain: 00:00:00" />
                
        </RelativeLayout>
        
    </LinearLayout>
    
    <!-- Waveform Progress View -->
    <SeekBar
        android:id="@+id/player_waveform"
        android:layout_width="match_parent"
        android:layout_height="@dimen/seekbar_height"
        android:layout_below="@id/track_info_container"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginTop="4dp"
        android:paddingLeft="0dp"
        android:paddingRight="0dp"
        android:minHeight="@dimen/seekbar_height"
        android:maxHeight="@dimen/seekbar_height"
        android:background="@color/black"
        android:max="100"
        android:progress="50"
        android:progressDrawable="@drawable/pitchbar_progress"
        android:thumb="@drawable/seekbar_progress_white"
        android:thumbOffset="1dp"/>
    
    <!-- Pitch Control -->
    <org.qstuff.qplayer.ui.util.VerticalSeekBar
        android:id="@+id/pitch_control"
        android:layout_width="@dimen/pitchbar_width"
        android:layout_height="wrap_content"
        android:layout_below="@+id/player_text_version"
        android:layout_above="@+id/player_waveform"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/black_not_rounded_top_right_shape"
        android:max="1000"
        android:progress="500"
        android:progressDrawable="@android:color/transparent"
        android:thumb="@drawable/pitchbar_progress_white"
        android:thumbOffset="5dp" />

    <!-- Jog Wheel (Real) -->
    <FrameLayout
        android:id="@+id/jog_wheel_frame"
        android:layout_width="@dimen/jogwheel_frame_diameter"
        android:layout_height="@dimen/jogwheel_frame_diameter"
        android:layout_marginRight="-6dp"
        android:layout_marginTop="-7.5dp"
        android:layout_marginBottom="0dp"
        android:foregroundGravity="center"
        android:layout_below="@+id/player_text_version"
        android:background="@null"
        android:layout_alignParentRight="true">
        
        <View
            android:layout_width="@dimen/jogwheel_frame_diameter"
            android:layout_height="@dimen/jogwheel_frame_diameter"
            android:layout_marginTop="2dp"
            android:background="@drawable/white_circle_shape"/>
    
        <org.qstuff.qplayer.ui.player.JogWheelImageView
            android:id="@+id/jog_wheel"
            android:layout_width="@dimen/jogwheel_diameter"
            android:layout_height="@dimen/jogwheel_diameter"
            android:layout_marginTop="1dp"
            android:layout_gravity="center"/>
        
    </FrameLayout>
    
    <!-- Pitch Control Value -->
    <TextView
        android:id="@+id/pitch_control_value"
        android:layout_width="@dimen/pitch_text_width"
        android:layout_height="@dimen/textview_height"
        android:layout_marginBottom="1dp"
        android:layout_marginLeft="1dp"
        android:gravity="left"
        android:background="@color/black"
        android:layout_alignTop="@+id/pitch_control"
        android:layout_toRightOf="@+id/pitch_control"
        style="@style/PlayerTextStyle"
        android:text="  0,0 %"/>

    <!-- Pitch Range Setting -->
    <Spinner
        android:id="@+id/pitch_range_setting"
        android:layout_width="match_parent"
        android:layout_height="@dimen/textview_height"
        android:layout_marginBottom="1dp"
        android:layout_marginLeft="1dp"
        android:layout_marginRight="100dp"
        style="@style/PlayerTextStyle"
        android:gravity="left"
        android:spinnerMode="dropdown"
        android:background="@color/black"
        android:layout_alignTop="@+id/pitch_control"
        android:layout_toRightOf="@+id/pitch_control_value"/>
    
    <!-- Pitch Reset Button -->
    <TextView
        android:id="@+id/pitch_reset_button"
        android:layout_width="match_parent"
        android:layout_height="@dimen/textview_height"
        android:layout_marginBottom="1dp"
        android:layout_marginLeft="1dp"
        android:layout_marginRight="100dp"
        android:gravity="left"
        android:background="@color/black"
        android:layout_below="@+id/pitch_control_value"
        android:layout_toRightOf="@+id/pitch_control"
        style="@style/PlayerTextStyle"
        android:text=" reset"/>
    
    <!-- Player Secondary Buttons Row -->
    <LinearLayout
        android:id="@+id/player_buttons_row_two"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/pitch_reset_button"
        android:layout_toRightOf="@+id/pitch_control"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:orientation="horizontal" >

        <ImageButton
            android:id="@+id/player_button_repeat"
            style="@style/PlayerButtonStyle"
            android:layout_width="@dimen/player_button_size"
            android:layout_height="@dimen/player_button_size"
            android:src="@drawable/button_loop"/>

        <ImageButton
            android:id="@+id/player_button_shuffle"
            style="@style/PlayerButtonStyle"
            android:layout_width="@dimen/player_button_size"
            android:layout_height="@dimen/player_button_size"
            android:src="@drawable/button_shuffle"/>


    </LinearLayout>

    <!-- Player Main Buttons Row -->
    <LinearLayout
        android:id="@+id/player_buttons_row_one"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/track_info_container"
        android:layout_toRightOf="@+id/pitch_control"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/player_button_previous"
            style="@style/PlayerButtonStyle"
            android:layout_width="@dimen/player_button_size"
            android:layout_height="@dimen/player_button_size"
            android:src="@drawable/button_previous" />

        <ImageView
            android:id="@+id/player_button_next"
            style="@style/PlayerButtonStyle"
            android:layout_width="@dimen/player_button_size"
            android:layout_height="@dimen/player_button_size"
            android:src="@drawable/button_next"/>

        <ImageView
            android:id="@+id/player_button_play"
            style="@style/PlayerButtonStyle"
            android:layout_width="@dimen/player_button_overshoot"
            android:layout_height="@dimen/player_button_size"
            android:scaleType="fitStart"
            android:src="@drawable/button_play_selected"/>

    </LinearLayout>

</RelativeLayout>

