<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- General -->
    <string name="app_name">q.player</string>
    <string name="build_type">Release</string>

    <!-- Player -->
    <string name="player_no_track_loaded">... no track loaded ...</string>

    <!-- Browser -->
    <string name="Queue">queue</string>
    <string name="Playlists">playlists</string>
    <string name="Filebrowser">filebrowser</string>

    <!-- Dialogs -->
    <string name="dialog_ok">Ok</string>
    <string name="dialog_cancel">Cancel</string>

    <string name="dialog_add_to_queue">To Queue</string>
    <string name="dialog_add_to_playlist">To Playlist</string>
    <string name="dialog_play">Play Now</string>

    <string name="file_short_click_handle_dialog_tag">file_short_click_handle__dialog_tag</string>
    <string name="file_short_click_handle_dialog_title">Add this track to a the queue, to a playlist or play it immediately ?</string>

    <string name="add_tracks_to_queue_dialog_tag">add_tracks_to_queue_dialog_tag</string>
    <string name="add_tracks_to_queue_dialog_title">Add these tracks to the queue ?</string>

    <string name="choose_laylist_dialog_tag">choose_laylist_dialog_tag</string>
    <string name="choose_playlist_dialog_title">Choose a playlist or create a new one</string>
    <string name="choose_playlist_dialog_add">Enter a name for new playlist:</string>
    <string name="choose_playlist_dialog_add_hint">playlist</string>

    <string name="storage_permission_request_message">We need the storage permission to access the sound files on your sdcard</string>


</resources>
